<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="스마트 검색"
            android:textSize="30sp"
            android:layout_marginTop="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="60sp"
                android:layout_weight=".90"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionSearch"/>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_weight=".10"
                android:background="@drawable/ic_baseline_search_24"/>

        </LinearLayout>

        <TextView
            android:id="@+id/search_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_type"
            android:textSize="25sp"
            android:layout_marginTop="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/type_movie_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/movie"
                android:textSize="15sp"
                android:layout_margin="10sp"/>

            <Button
                android:id="@+id/type_drama_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/drama"
                android:textSize="15sp"
                android:layout_margin="10sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/search_genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textSize="25sp"
            android:layout_margin="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/genre_action_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/action"
                android:textSize="13sp"
                android:layout_margin="1sp"
                android:layout_weight=".20"/>

            <Button
                android:id="@+id/genre_comedy_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/comedy"
                android:textSize="13sp"
                android:layout_margin="1sp"
                android:layout_weight=".20" />

            <Button
                android:id="@+id/genre_fantasy_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/fantasy"
                android:textSize="13sp"
                android:layout_margin="1sp"
                android:layout_weight=".20" />

            <Button
                android:id="@+id/genre_animation_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/animation"
                android:textSize="12sp"
                android:layout_margin="1sp"
                android:layout_weight=".20" />

            <Button
                android:id="@+id/genre_adventure_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/adventure"
                android:textSize="13sp"
                android:layout_margin="1sp"
                android:layout_weight=".20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/genre_drama_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/drama"
                android:textSize="13sp"
                android:layout_margin="1sp"
                android:layout_weight=".20"/>

            <Button
                android:id="@+id/genre_crime_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/crime"
                android:textSize="13sp"
                android:layout_margin="1sp"
                android:layout_weight=".20"/>

            <Button
                android:id="@+id/genre_war_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/war"
                android:textSize="13sp"
                android:layout_margin="1sp"
                android:layout_weight=".20"/>

            <Button
                android:id="@+id/genre_family_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/family"
                android:textSize="13sp"
                android:layout_margin="1sp"
                android:layout_weight=".20"/>

            <Button
                android:id="@+id/genre_mystery_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/mystery"
                android:textSize="13sp"
                android:layout_margin="1sp"
                android:layout_weight=".20"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight=".60">

                <Button
                    android:id="@+id/genre_documentary_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="@string/documentary"
                    android:textSize="12sp"
                    android:layout_margin="1sp"
                    android:layout_weight=".20" />

                <Button
                    android:id="@+id/genre_science_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="@string/science"
                    android:textSize="13sp"
                    android:layout_margin="1sp"
                    android:layout_weight=".20" />

                <Button
                    android:id="@+id/genre_western_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:text="@string/western"
                    android:textSize="13sp"
                    android:layout_margin="1sp"
                    android:layout_weight=".20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/movie_option1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight=".40"
                android:visibility="invisible">

                <Button
                    android:id="@+id/genre_history_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="1sp"
                    android:text="@string/history"
                    android:textSize="13sp"
                    android:layout_weight=".20" />

                <Button
                    android:id="@+id/genre_horror_button"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="1sp"
                    android:text="@string/horror"
                    android:textSize="13sp"
                    android:layout_weight=".20" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movie_option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/genre_music_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="1sp"
                android:text="@string/music"
                android:textSize="13sp"
                android:layout_weight=".20" />

            <Button
                android:id="@+id/genre_romance_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="1sp"
                android:text="@string/romance"
                android:textSize="13sp"
                android:layout_weight=".20" />

            <Button
                android:id="@+id/genre_thriller_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="1sp"
                android:text="@string/thriller"
                android:textSize="13sp"
                android:layout_weight=".20"/>

            <Button
                android:id="@+id/genre_tv_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="1sp"
                android:text="@string/tv"
                android:textSize="13sp"
                android:layout_weight=".20" />

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="1sp"
                android:layout_weight=".20"
                android:background="#00ff0000"/>

        </LinearLayout>

        <TextView
            android:id="@+id/search_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="25sp"
            android:layout_margin="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/start_year"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_margin="10sp"
                android:entries="@array/year_item"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="년   "
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>

            <Spinner
                android:id="@+id/start_month"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_margin="10sp"
                android:entries="@array/month_item"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 월 부터"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/end_year"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_margin="10sp"
                android:entries="@array/year_item"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="년   "
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>

            <Spinner
                android:id="@+id/end_month"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_margin="10sp"
                android:entries="@array/month_item"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 월 까지"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>


</ScrollView>