<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- #Tringding과 버튼을 가로 정렬하기 위해 LinearLayout 사용-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending"
                android:textSize="30sp"
                android:layout_gravity="start"/>

            <!-- 하나는 왼쪽, 하나는 오른쪽 정렬하기 위해 필요하대서 넣었다.-->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/trending_button"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:text="@string/more"
                android:layout_gravity="end"
                android:background="#00ff0000"/>

        </LinearLayout>

        <!-- 가로 스크롤은 Java에서 구현해줄 예정 -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Trending_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
        </androidx.recyclerview.widget.RecyclerView>
        <!-- 여기까지가 #Trending. 아래는 #New 부분 반복-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_string"
                android:textSize="30sp"
                android:layout_gravity="start"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/new_button"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:text="@string/more"
                android:layout_gravity="end"
                android:background="#00ff0000"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/New_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
        </androidx.recyclerview.widget.RecyclerView>
        <!-- 여기까지가 New-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmark"
                android:textSize="30sp"
                android:layout_gravity="start"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bookmark_button"
                android:visibility="gone"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:text="@string/more"
                android:layout_gravity="end"
                android:background="#00ff0000"/>

        </LinearLayout>


        <FrameLayout
            android:id="@+id/bookmark_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Bookmark_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
            </androidx.recyclerview.widget.RecyclerView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/bookmark_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:text="로그인한 유저만 사용할 수 있습니다."
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="로그인"
                    android:textSize="15sp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</ScrollView>